--- a/style.css
+++ b/style.css
@@ -219,3 +219,58 @@ footer {
     height: auto;
     margin: 15px;
 }
+/* Media Queries */
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .info-link {
+        margin-top: 10px;
+    }
+
+    .about-img {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-left, .footer-right {
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+
+    .footer .col-md-3 {
+        max-width: 100%;
+        padding: 0;
+    }
+}
+
+@media (max-width: 480px) {
+    .name {
+        font-size: 20px;
+    }
+
+    .download-button, .project-button {
+        font-size: 10px;
+        padding: 4px 12px;
+    }
+
+    .contact-form input,
+    .contact-form textarea {
+        font-size: 14px;
+    }
+
+    .contact-form button {
+        font-size: 14px;
+    }
+
+    .logosimg {
+        width: 40px;
+    }
+}
